k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo
  labels:
    app: java-kubernetes
    environment: dev
